[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
pytest = [
    "pyright>=1.1.403",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
